unpackaged/main/default/objects/Custom_Pricing__c/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <defaultValue>0.0</defaultValue>
    <inlineHelpText>The base price used in calculations. It&#39;s usage will depend on the selected Type. Allows up to 4 decimal places</inlineHelpText>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>