unpackaged/main/default/objects/Custom_Pricing__c/fields/Custom_Pricing_Required__c.field-meta.xml
<CustomField>
    <fullName>Custom_Pricing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked bypasses product&#39;s Non Discountable status as it is required for a specific tier of pricing. Only used for Legacy pricing.</inlineHelpText>
    <label>Custom Pricing Required</label>
    <type>Checkbox</type>
</CustomField>