unpackaged/main/default/objects/Custom_Pricing__c/fields/Round_Sync_Price__c.field-meta.xml
<CustomField>
    <fullName>Round_Sync_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked and Sync Currencies is selected the pricing for non USD records will be rounded based on system settings. These can be adjusted under the Price Rounding Custom Metadata Type.</inlineHelpText>
    <label>Round Sync Price</label>
    <type>Checkbox</type>
</CustomField>