unpackaged/main/default/objects/Custom_Pricing__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The type of custom pricing this record corresponds to</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Custom_Pricing_Type</valueSetName>
    </valueSet>
</CustomField>