unpackaged/main/default/objects/Custom_Pricing__c/fields/Use_Block_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Use_Block_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected this will take the price and divide by the effective quantity during calculation, mimicking block pricing. Used for Legacy pricing only</inlineHelpText>
    <label>Use Block Pricing</label>
    <type>Checkbox</type>
</CustomField>